--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "^2.3.1",
     "react-native-responsive-screen": "^1.4.2",
