--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
+    "realm": "^10.11.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   },
