--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.11.1",
-    "react-native-reanimated": "^2.3.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-safe-area-view": "^1.1.1",
@@ -32,7 +31,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
-    "realm": "^10.11.0",
+    "realm": "^10.20.0-beta.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
   },
