--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-device-info": "^8.4.8",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.4.9",
